# chess-app

./: .clang-format  .clangd  .gitignore  AbstractChessController.cpp  CMakeCache.txt  CMakeLists.txt  Chess  Chess-app  Chess-app.pro  Chess-test.pro  Chess.cpp  ChessController.cpp  ChessNewCore.pro  ChessNewCore.pro.user.1adef8f  Chessboard.cpp  Makefile  MakefileLinux  MakefileWindows  MyBot.cpp  README.md  UI.cpp  board.cpp  board.h  board_test.cpp  bot.cpp  bot.h  cmake_install.cmake  compile.bat  main.cpp  make.py  map_preview.cpp  map_preview.h  player.cpp  player.h  turn.cpp  turn.h  turnexecutor.cpp  turnexecutor.h  turngenerator.cpp  turngenerator.h  (+1 more)
.github/workflows/: build-and-test.yml  release.yml
.zed/: tasks.json
AI/: CMakeLists.txt  alphabeta.hpp  computer.cpp  computer.hpp  evaluate.cpp  evaluate.hpp  mateevaluator.hpp  minimax.hpp  minmax.hpp  opening.cpp  opening.hpp  openingsbase.cpp  openingsbase.hpp  ordering.hpp  player.cpp  player.hpp  position_rating.hpp  pvs.hpp  qsearch.hpp  searchtree.cpp  searchtree.hpp  statistics.hpp  transpositiontable.hpp  ttable.cpp  ttable.hpp
AI/Benchmark/: CMakeLists.txt  benchmark.cpp
AI/Tests/: CMakeLists.txt  approximation_test.cpp
AI/UCI/: CMakeLists.txt  asyncio.hpp  uci.cpp
Core/: CMakeLists.txt  bitboard.cpp  bitboard.h  bitboard.hpp  bitconsts.hpp  board.cpp  board.h  board.hpp  boardtools.hpp  debug.hpp  figures.h  figures.hpp  magic.cpp  magic.hpp  magicboardtools.cpp  magicboardtools.h  match.cpp  match.h  match.hpp  parsingtools.cpp  parsingtools.hpp  player.cpp  player.h  player.hpp  position.hpp  positions.h  positions.hpp  turn.cpp  turn.h  turn.hpp  turnexecutor.cpp  turnexecutor.h  turngenerator.cpp  turngenerator.h  zobrist.cpp  zobrist.hpp
Core/BoardDebugger/: CMakeLists.txt  board_debugging.cpp
Core/Magic/: CMakeLists.txt  magic.cpp  magic.h  magic.hpp  slowmagic.cpp  slowmagic.h  zobrist.cpp  zobrist.hpp
Core/MagicNumbers/: CMakeLists.txt  magicnumbers.cpp  magicnumbers.h
Core/tests/: CMakeLists.txt  board_test.cpp  boards_test.cpp  boardtools_test.cpp  fen_test.cpp  generators_test.cpp  positions_test.cpp  turngenerator_test.cpp
Debuging/: CMakeLists.txt  board_debugging.cpp
Net/: CMakeLists.txt
Tests/: CMakeLists.txt  alphabeta.test.cpp  approximation_test.cpp  bitboard.test.cpp  boards_test.cpp  boardtools_test.cpp  generators_test_particular.cpp  match_test.cpp  positions_test.cpp
UI/: BoardDesign.cpp  BoardDesign.h  BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  GameUI.ui  aiwidget.cpp  aiwidget.h  aiwidget.ui  chessboard.cpp  chessboard.h  chessboardplay.cpp  chessboardplay.h  gameui.cpp  gameui.h  mainmenu.cpp  mainmenu.h  mainmenu.ui  matchvisual.cpp  matchvisual.h  singleplayer.cpp  singleplayer.h  singleplayer.ui
include/: ABot.h  AObs.h  APlayer.h  AbstractBot.h  AbstractChessController.h  AbstractObs.h  AbstractObserver.h  Chess.h  ChessController.h  Chessboard.h  MyBot.h  UI.h  UIobs.h
lib/chessai/: CMakeLists.txt
lib/chessai/include/: alphabeta.hpp  awindow.hpp  bftable.hpp  bitboardtuple.hpp  boarditerator.hpp  chesstreehash.hpp  computer.hpp  evaluate.hpp  evaluator.hpp  eventcounter.hpp  exitcondition.hpp  hktable.hpp  itdeepening.hpp  minmax.hpp  ordering.hpp  pvs.hpp  qsearch.hpp  score.hpp  search.hpp  searchmanager.hpp  searchsettings.hpp  statistics.hpp  timemanager.hpp  timer.hpp  ttable.hpp
lib/chessai/include/chessai/: absearch.hpp  alphabeta.hpp  computer.hpp  evaluator.hpp  eventcounter.hpp  hktable.hpp  ifeedback.hpp  ordering.hpp  qsearch.hpp  score.hpp  search.hpp  searchsettings.hpp  threadpool.hpp  timemanager.hpp  ttable.hpp
lib/chessai/src/: bftable.cpp  boarditerator.cpp  computer.cpp  evaluate.cpp  evaluator.cpp  hktable.cpp  score.cpp  ttable.cpp
lib/chessai/tests/: alphabeta.test.cpp  computer.test.cpp  evaluate.test.cpp  hktable.test.cpp  itdeepening.test.cpp  pvs.test.cpp  qsearch.test.cpp  ttable.test.cpp
lib/chesscore/: CMakeLists.txt
lib/chesscore/include/: bitboard.hpp  bitconsts.hpp  debug.hpp  fen.hpp  figures.hpp  match.hpp  parsingtools.hpp  position.hpp  turn.hpp
lib/chesscore/include/chesscore/: bitasm.hpp  bitboard.hpp  bitconsts.hpp  bitutils.hpp  fen.hpp  figures.hpp  magic.hpp  match.hpp  position.hpp  turn.hpp  zobrist.hpp
lib/chesscore/src/: bitboard.cpp  bitutils.hpp  fen.cpp  figures.cpp  magic.cpp  magic.hpp  match.cpp  turn.cpp  zobrist.cpp  zobrist.hpp
lib/chesscore/tests/: bitboard.benchmark.cpp  bitboard.test.cpp  boards.test.cpp  generators.hash.cpp  generators.test.cpp  generators_hash.cpp  generators_test_particular_from.test.cpp  generators_test_particular_to.test.cpp  match.test.cpp  positions.test.cpp  positions_test.cpp  turn.test.cpp  turn_test.cpp
lib/chessui/: CMakeLists.txt
lib/chessui/include/: aiwidget.h  mainmenu.h  singleplayer.h
lib/chessui/src/: aiwidget.cpp  boarddesign.cpp  boardwidget.cpp  mainmenu.cpp  mainmenu.ui  singleplayer.cpp  singleplayer.ui
sourse/: ABot.h  AObs.h  APlayer.h  Chess.h  ChessController.cpp  ChessController.h  Chessboard.cpp  Chessboard.h  MainMenu.cpp  MainMenu.h  Makefile  MyBot.cpp  MyBot.h  NetPlayer.cpp  NetPlayer.h  UI.cpp  UI.h  main.cpp
sourse/bots/: MyBot.cpp  UI.cpp
sourse/core/: Chess.cpp  ChessController.cpp  Chessboard.cpp
sourse/obs/: UIobs.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  main.cpp  pvsbenchmark.cpp  pvsbenchmark.hpp  qsearchbench.cpp  qsearchbench.hpp  searchbench.cpp  searchbench.hpp  staticbenchmark.cpp  staticbenchmark.hpp
src/chess/: CMakeLists.txt  boarddesign.cpp  boardwidget.h  main.cpp  singleplayer.cpp  singleplayer.h  singleplayer.ui
src/debug/: CMakeLists.txt  main.cpp
src/debugging/: CMakeLists.txt  main.cpp
src/uci/: CMakeLists.txt  asyncio.hpp  main.cpp  parser.hpp  reader.hpp  tools.hpp  uci.cpp  uci.hpp  writter.hpp
src/uci_adapter/: CMakeLists.txt  asyncio.hpp  uci.cpp
tools/: bitboard.py  comparator.py
